Replaced BusinessException for specific step Exception object (ParserException and PersisterException). Fixed an issue in ManagerCompendiumParser where when a YouthTeam was not enrolled in a YouthLeague it would fail. Modified a few XmlParserBase methods for consistency. Fixed an issue in WorldDetailsParser created by the previous modifications in XmlParserBase. Added new UnexpectedEmptyElement resource for XmlParser objects.

--- a/src/Hyperar.HUM.Globalization/ErrorMessages.es.resx
+++ b/src/Hyperar.HUM.Globalization/ErrorMessages.es.resx
@@ -134,4 +134,7 @@ Encontrado: {1}.</value>
   <data name="TypeOutOfRange" xml:space="preserve">
     <value>Tipo '{0}' fuera de rango para {1}.</value>
   </data>
+  <data name="UnexpectedEmptyElement" xml:space="preserve">
+    <value>Elemento vacío inesperado: {0}.</value>
+  </data>
 </root>
